@@ -10,4 +10,14 @@ document.observe('dom:loaded', function() {
         $($('prefs').getInputs('checkbox')).flatten().invoke('disable');
         $('change_acl_mbox').click();
     });
+
+    $$('TABLE.prefsAclTable')[0].on('change', 'SELECT.aclTemplate', function(e, elt) {
+        var acl = $F(elt);
+
+        elt.up('TR').select('INPUT[type=checkbox]').each(function(i) {
+            i.setValue(acl.include(i.value));
+        });
+
+        elt.selectedIndex = 0;
+    });
 });
